--- a/CompanySurvey/Views/Shared/_Layout.cshtml
+++ b/CompanySurvey/Views/Shared/_Layout.cshtml
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Company Survey | @ViewBag.Title</title>
+    <title>Company Survey | @ViewData["Title"]</title>
 
     <!-- Google Font: Source Sans Pro -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
@@ -186,7 +186,7 @@
             <!-- Brand Logo -->
             <a href="index3.html" class="brand-link">
                 <img src="~/dist/img/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
-                <span class="brand-text font-weight-light">AdminLTE 3</span>
+                <span class="brand-text font-weight-light">Survey Management System</span>
             </a>
 
             <!-- Sidebar -->
@@ -197,7 +197,7 @@
                         <img src="~/dist/img/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image">
                     </div>
                     <div class="info">
-                        <a href="#" class="d-block">Alexander Pierce</a>
+                        <a href="#" class="d-block">@(Context.Session.GetString("UserName")??"")</a>
                     </div>
                 </div>
 
@@ -206,7 +206,7 @@
                     <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
                         <!-- Add icons to the links using the .nav-icon class
                              with font-awesome or any other icon font library -->
-                        @if (Context.Session.GetInt32("RoleId") == null)
+                        @if (Context.Session.GetInt32("RoleId") == 1)
                         {
                             <li class="nav-item">
                                 <a asp-action="Index" asp-controller="Home" class="nav-link">
@@ -265,7 +265,7 @@
                                 </a>
                             </li>
                         }
-                        @if (Context.Session.GetInt32("RoleId") == null)
+                        @if (Context.Session.GetInt32("RoleId") == 2)
                         {
                             <li class="nav-item">
                                 <a asp-action="Index" asp-controller="Manager" class="nav-link">
