--- a/CompanySurvey/Views/Shared/_Layout.cshtml
+++ b/CompanySurvey/Views/Shared/_Layout.cshtml
@@ -256,14 +256,14 @@
                                     </p>
                                 </a>
                             </li>
-                            <li class="nav-item">
+                           @* <li class="nav-item">
                                 <a asp-action="GetAnswers" asp-controller="Home" class="nav-link">
                                     <i class="nav-icon fas fa-font"></i>
                                     <p>
                                         Manage Answers
                                     </p>
                                 </a>
-                            </li>
+                            </li>*@
                         }
                         @if (Context.Session.GetInt32("RoleId") == 2)
                         {
