--- a/CompanySurvey/Views/Shared/_Layout.cshtml
+++ b/CompanySurvey/Views/Shared/_Layout.cshtml
@@ -284,6 +284,14 @@
                                 </a>
                             </li>
                         }
+                        <li class="nav-item">
+                            <a asp-action="Logout" asp-controller="Account" class="nav-link">
+                                <i class="nav-icon fas fa-users"></i>
+                                <p>
+                                    Logout
+                                </p>
+                            </a>
+                        </li>
                     </ul>
                 </nav>
                 <!-- /.sidebar-menu -->
