--- a/CompanySurvey/Views/Home/CreateQuestion.cshtml
+++ b/CompanySurvey/Views/Home/CreateQuestion.cshtml
@@ -127,6 +127,7 @@
     });
     function ChangeQuestionType() {
         var text = $('#type :selected').text();
+        alert(text);
         if (text.toLowerCase() == "open questions with multiple choice") {
             $("#optiontype").text("Checkboxes");
             $("#options").show();
