--- a/CompanySurvey/Views/Home/GetAllConditions.cshtml
+++ b/CompanySurvey/Views/Home/GetAllConditions.cshtml
@@ -11,7 +11,7 @@
             </div>
             <div class="col-sm-6">
                 <ol class="breadcrumb float-sm-right">
-                    <li class="breadcrumb-item"><a asp-action="CreateCompany" class="btn btn-info">Create</a></li>
+                    <li class="breadcrumb-item"><a asp-action="GetAllSurveys" class="btn btn-info">Surveys list</a></li>
                 </ol>
             </div>
         </div>
